# gbbai-azure-ai-search-indexing

./: .env.sample  .gitignore  .pre-commit-config.yaml  01-creation-index.ipynb  01-creation-indexes.ipynb  01-indexing_pdfs.ipynb  01-ocr-gpt4v.ipynb  01-ocr-with-document-intelligence.ipynb  01-vector-indexing.ipynb  02-Vector_indexing-content-with-security-trimming.ipynb  02-Vector_indexing_from_web.ipynb  02-a-indexing-vectorized-content.ipynb  02-b-indexing-vectorized-content-from-multiple-sources.ipynb  02-indexing-vectorized-content.ipynb  02-indexing_from_web.ipynb  02-vector-indexing.ipynb  03-retrieval-ai-search.ipynb  03-retrieval.ipynb  04-Vector_Indexing_from_blob_storage.ipynb  04-evaluation.ipynb  04-retrieval_ai_search.ipynb  04-searching_ai_search.ipynb  05-Retrieval_ai_search.ipynb  05-automation.ipynb  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.md  chunked_content_docs.json  environment.yaml  pyproject.toml  requirements-codequality.txt  requirements-pipelines.txt  requirements.txt  requirements_test.text
.github/: pull_request_template.md
.github/issue_template/: bug_request.md  feature_request.md
.github/workflows/: main_staging_ci.yml
app/: README.md
app/Indexer/: Dockerfile  deployapp.sh  requirements.txt
app/Indexing/: Dockerfile  app.py  test.http
app/IndexingJob/: app.py  deployapp.sh
app/SyncData/: function_app.py
app/SyncFunctionBlob/: function_app.py
app/test_apis/: Indexer.http
deployment/: README.md
infra/: README.md  deployment.bicep  deployment.json
pipelines/: __init__.py
src/: chunking.py  indexing.py  settings.py  utils.py
(+124 files in other folders)
